[package]
name = "HopalongMap"
version = "0.1.0"
authors = ["vbaena"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = { git = "https://github.com/38/plotters.git", default_features = false, features = ["svg"] }
rand = "*"
